--- a/app/globals.css
+++ b/app/globals.css
@@ -174,7 +174,7 @@
   height: 8mm;
   min-height: 8mm;
   max-height: 8mm;
-  border-bottom: 0.5pt solid grey;
+  border-bottom: 0.5pt solid #951b81;
 }
 
 /* Основно съдържание на етикета */
